# rattrapage

./: .gitignore  README.md  pyproject.toml
src/rattrapage/: __init__.py  denver_example.txt  statistics.py  team_statistics.py
